Add Throttle.Factory to AppContext
Signed-off-by: Michael Tinker <michael.tinker@swirldslabs.com>